--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
     .container {
       width: 100%;
-      max-width: 100%;
+      max-width: 1280px;
       margin-left: auto;
       margin-right: auto;
       padding-left: 1rem;
@@ -339,6 +339,11 @@
     .icon-bounce:hover i {
       animation: bounce 1s ease;
     }
+
+    .join-now-section {
+      background: linear-gradient(135deg, #2563EB 0%, #60A5FA 100%);
+      box-shadow: 0 8px 32px rgba(37, 99, 235, 0.1);
+    }
   </style>
 </head>
 
@@ -501,6 +506,27 @@
             <p class="text-slate-600">קופונים והטבות מיוחדות באופן קבוע לחברי הקבוצה</p>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Join Now Section -->
+  <section class="container mb-16">
+    <div class="join-now-section rounded-3xl p-8 sm:p-10 md:p-16 text-center relative overflow-hidden" data-aos="fade-up">
+      <!-- Abstract shapes in background -->
+      <div class="absolute top-0 right-0 w-56 h-56 bg-white/5 rounded-full -mr-20 -mt-20"></div>
+      <div class="absolute bottom-0 left-0 w-48 h-48 bg-white/5 rounded-full -ml-10 -mb-10"></div>
+      <div class="absolute top-1/2 right-1/4 w-32 h-32 bg-white/5 rounded-full transform -translate-y-1/2"></div>
+      
+      <div class="relative z-10">
+        <h2 class="text-3xl md:text-4xl font-bold text-white mb-6">מצטרפים עכשיו!</h2>
+        <p class="text-xl text-white/80 max-w-3xl mx-auto mb-8">
+          הצטרפו לאחת מהקבוצות שלנו וקבלו גישה מיידית להטבות בלעדיות ומבצעים חמים
+        </p>
+        <a href="#groups" class="btn bg-white text-primary hover:bg-blue-50 font-bold px-8 py-4 text-lg inline-flex items-center">
+          <i class="fas fa-users ml-2"></i>
+          הצטרפו עכשיו
+        </a>
       </div>
     </div>
   </section>
