הוספת לוגו לקטגוריה

--- a/index.html
+++ b/index.html
@@ -408,7 +408,9 @@
       <!-- Card 1 -->
       <div class="card p-6 text-center relative" style="--highlight-start: #2563EB; --highlight-end: #0EA5E9;">
         <div class="card-highlight"></div>
-        <div class="text-6xl mb-6 emoji-pulse">🔥</div>
+        <div class="mb-6 flex items-center justify-center" style="height: 4rem;">
+          <img src="https://gm.bizbiz.co.il/media/categories/obligor_favicon.jpeg" alt="Obligor Logo" class="w-12 h-12 sm:w-14 sm:h-14 object-contain rounded-full">
+        </div>
         <h2 class="text-2xl font-bold mb-6 text-dark">הקבוצה הראשית</h2>
         <a href="https://wa.me/123456789" target="_blank" class="btn bg-green-500 hover:bg-green-600 text-white border-0 w-full mb-3">
           <i class="fab fa-whatsapp ml-2 text-xl"></i> WhatsApp
@@ -421,7 +423,9 @@
       <!-- Card 2 -->
       <div class="card p-6 text-center relative" style="--highlight-start: #2563EB; --highlight-end: #0EA5E9;">
         <div class="card-highlight"></div>
-        <div class="text-6xl mb-6 emoji-pulse">🛠️</div>
+        <div class="mb-6 flex items-center justify-center" style="height: 4rem;">
+          <span class="text-5xl emoji-pulse">🛠️</span>
+        </div>
         <h2 class="text-2xl font-bold mb-6 text-dark">כלי עבודה וגננות</h2>
         <a href="https://wa.me/123456789" target="_blank" class="btn bg-green-500 hover:bg-green-600 text-white border-0 w-full mb-3">
           <i class="fab fa-whatsapp ml-2 text-xl"></i> WhatsApp
@@ -434,7 +438,9 @@
       <!-- Card 3 -->
       <div class="card p-6 text-center relative" style="--highlight-start: #2563EB; --highlight-end: #0EA5E9;">
         <div class="card-highlight"></div>
-        <div class="text-6xl mb-6 emoji-pulse">🌞</div>
+        <div class="mb-6 flex items-center justify-center" style="height: 4rem;">
+          <span class="text-5xl emoji-pulse">🌞</span>
+        </div>
         <h2 class="text-2xl font-bold mb-6 text-dark">כל לבית ולגינה</h2>
         <a href="https://wa.me/123456789" target="_blank" class="btn bg-green-500 hover:bg-green-600 text-white border-0 w-full mb-3">
           <i class="fab fa-whatsapp ml-2 text-xl"></i> WhatsApp
@@ -447,7 +453,9 @@
       <!-- Card 4 -->
       <div class="card p-6 text-center relative" style="--highlight-start: #2563EB; --highlight-end: #0EA5E9;">
         <div class="card-highlight"></div>
-        <div class="text-6xl mb-6 emoji-pulse">🏕️</div>
+        <div class="mb-6 flex items-center justify-center" style="height: 4rem;">
+          <span class="text-5xl emoji-pulse">🏕️</span>
+        </div>
         <h2 class="text-2xl font-bold mb-6 text-dark">קמפינג ומחנאות</h2>
         <a href="https://wa.me/123456789" target="_blank" class="btn bg-green-500 hover:bg-green-600 text-white border-0 w-full mb-3">
           <i class="fab fa-whatsapp ml-2 text-xl"></i> WhatsApp
